src/snapshots/aidl_parser__rules__tests__interface_with_errors.snap
---
source: src/rules.rs
expression: res

---
Interface(
  oneway: false,
  name: "Potato",
  elements: [
    Method(Method(
      oneway: false,
      name: "method1",
      return_type: Type(
        name: "String",
        kind: String,
        symbol_range: "...",
      ),
      args: [],
      symbol_range: "...",
      full_range: "...",
      value_range: "...",
      oneway_range: "...",
    )),
    Method(Method(
      oneway: false,
      name: "method2",
      return_type: Type(
        name: "int",
        kind: Primitive,
        symbol_range: "...",
      ),
      args: [],
      symbol_range: "...",
      full_range: "...",
      value_range: "...",
      oneway_range: "...",
    )),
    Const(Const(
      name: "const2",
      const_type: Type(
        name: "String",
        kind: String,
        symbol_range: "...",
      ),
      value: "123",
      symbol_range: "...",
      full_range: "...",
    )),
  ],
  full_range: "...",
  symbol_range: "...",
)
