src/snapshots/aidl_parser__rules__tests__interface_with_javadoc.snap
---
source: src/rules.rs
expression: res

---
Interface(
  name: "Potato",
  elements: [],
  annotations: [],
  doc: Some("Interface documentation"),
  full_range: "...",
  symbol_range: "...",
)
