src/snapshots/aidl_parser__rules__tests__member_with_annotation.snap
---
source: src/rules.rs
assertion_line: 511
expression: res

---
Member(
  name: "memberName",
  type: Type(
    name: "TypeName",
    kind: custom,
    symbol_range: "...",
  ),
  value: Some("\"member value\""),
  annotations: [
    Annotation(
      name: "@AnnotationName",
    ),
  ],
  symbol_range: "...",
  full_range: "...",
)
