src/snapshots/aidl_parser__rules__tests__member_with_javadoc.snap
---
source: src/rules.rs
expression: res

---
Member(
  name: "memberName",
  member_type: Type(
    name: "TypeName",
    kind: Custom,
    symbol_range: "...",
  ),
  doc: Some("Member documentation"),
  symbol_range: "...",
  full_range: "...",
)
