src/snapshots/aidl_parser__rules__tests__method_arg_with_annotations.snap
---
source: src/rules.rs
assertion_line: 469
expression: res

---
Arg(
  name: Some("albert"),
  type: Type(
    name: "TypeName",
    kind: custom,
    symbol_range: "...",
    full_range: "...",
  ),
  annotations: [
    Annotation(
      name: "@Annotation1",
    ),
    Annotation(
      name: "@Annotation2",
      key_values: {
        "AnnotationParam": None,
      },
    ),
  ],
  symbol_range: "...",
  full_range: "...",
)
