src/snapshots/aidl_parser__rules__tests__method_arg_with_direction.snap
---
source: src/rules.rs
expression: res

---
Arg(
  direction: In(Range(
    start: Position(
      offset: 0,
      line_col: (1, 1),
    ),
    end: Position(
      offset: 2,
      line_col: (1, 3),
    ),
  )),
  name: None,
  arg_type: Type(
    name: "TypeName",
    kind: Custom,
    symbol_range: "...",
  ),
  symbol_range: "...",
  full_range: "...",
)
