src/snapshots/aidl_parser__rules__tests__method_arg_with_direction_and_name.snap
---
source: src/rules.rs
assertion_line: 460
expression: res

---
Arg(
  direction: out(Range(
    start: Position(
      offset: 0,
      line_col: (1, 1),
    ),
    end: Position(
      offset: 3,
      line_col: (1, 4),
    ),
  )),
  name: Some("roger"),
  type: Type(
    name: "TypeName",
    kind: custom,
    symbol_range: "...",
    full_range: "...",
  ),
  symbol_range: "...",
  full_range: "...",
)
