src/snapshots/aidl_parser__rules__tests__method_arg_with_name.snap
---
source: src/rules.rs
assertion_line: 444
expression: res

---
Arg(
  name: Some("albert"),
  type: Type(
    name: "TypeName",
    kind: unresolved,
    symbol_range: "...",
    full_range: "...",
  ),
  symbol_range: "...",
  full_range: "...",
)
