src/snapshots/aidl_parser__rules__tests__method_oneway.snap
---
source: src/rules.rs
expression: res
---
Method(
  name: "myMethod",
  return_type: Type(
    name: "TypeName",
    kind: unresolved,
    symbol_range: "...",
    full_range: "...",
  ),
  args: [],
  symbol_range: "...",
  full_range: "...",
  transact_code_range: "...",
  oneway_range: "...",
)
